# deriva

./: .gitignore  Cargo.toml  LICENSE  PUBLISHING.md  README.en.md  README.md
.github/workflows/: ci.yml  release.yml
assets/: story.txt
packaging/: PKGBUILD
src/: main.rs
